cluster/homa/diyhue/003-deployment.yaml
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: diyhue
  namespace: homa
  labels:
    app: diyhue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diyhue
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: diyhue

    spec:
      volumes:
        - name: config-volume
          hostPath:
            path: /data/volumes/homa/diyhue/config/
          #persistentVolumeClaim:
          #  claimName: diyhue-config
      containers:
        - name: diyhue
          image: 'diyhue/core:latest'
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 1900
            - containerPort: 2100
            - containerPort: 1982
          volumeMounts:
          - name: config-volume
            mountPath: /opt/hue-emulator/config
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: true
      restartPolicy: Always
      hostNetwork: true
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      nodeName: pial1 
#      nodeSelector:
#        location: home
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
