cluster/homa/diyhue/004-service.yaml
---

kind: Service
apiVersion: v1
metadata:
  name: homeassistant
  namespace: homa
  labels:
    app: homeassistant
    kubernetes.io/name: homeassistant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
      targetPort: 8123
  selector:
    app: homeassistant
